--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,10 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
+	<properties>
+		<docker.image.prefix>springguild</docker.image.prefix>
+	</properties>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -30,6 +34,22 @@
 		        <skip>true</skip>
 		      </configuration>
 	        </plugin>
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>docker-maven-plugin</artifactId>
+				<version>0.2.3</version>
+				<configuration>
+					<imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+					<dockerDirectory>src/main/docker</dockerDirectory>
+					<resources>
+						<resource>
+							<targetPath>/</targetPath>
+							<directory>${project.build.directory}</directory>
+							<include>${project.build.finalName}.jar</include>
+						</resource>
+					</resources>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
